--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "semi": ["error", "always"],
     "quotes": ["error", "double"],
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
